# gateapi-python

./: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
docs/: AccountApi.md  AccountBalance.md  AccountBookResponse.md  AccountDetail.md  AccountDetailKey.md  AccountRateLimit.md  AccountsResponse.md  AgencyCommission.md  AgencyCommissionHistory.md  AgencyTransaction.md  AgencyTransactionHistory.md  AlphaApi.md  AmendOrderResult.md  ApiV4KeyPerm.md  AutoRepaySetting.md  BatchAmendItem.md  BatchAmendOrderReq.md  BatchFuturesOrder.md  BatchOrder.md  BorrowCurrencyInfo.md  BrokerCommission.md  BrokerCommission1.md  BrokerCommissionSubBrokerInfo.md  BrokerTransaction.md  BrokerTransaction1.md  CancelBatchOrder.md  CancelOrder.md  CancelOrderResult.md  CollateralAdjust.md  CollateralAdjustRes.md  CollateralAlign.md  CollateralCurrency.md  CollateralCurrencyInfo.md  CollateralCurrencyRes.md  CollateralCurrentRate.md  CollateralFixRate.md  CollateralLoanApi.md  CollateralLoanCurrency.md  CollateralLtv.md  CollateralOrder.md  (+276 more)
example/: README.md  app.py  build.sh  config.py  futures.py  margin.py  spot.py
gate_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
gate_api/api/: __init__.py  account_api.py  alpha_api.py  collateral_loan_api.py  delivery_api.py  earn_api.py  earn_uni_api.py  flash_swap_api.py  futures_api.py  margin_api.py  margin_uni_api.py  multi_collateral_loan_api.py  options_api.py  spot_api.py  (+6 more)
gate_client/: __init__.py  api_client.py  configuration.py  rest.py
(+318 files in other folders)
