[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers:
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
maintainer = gateio
maintainer_email = dev@mail.gate.io

[flake8]
max-line-length=99
